2002-12-16  Matthias Clasen  <maclas@gmx.de>

	* gtkdoc-mkdb.in (OutputSGMLFile): Don't emit the additional
	anchors in the title which breaks the generated html (the title
	text is copied around). Instead, put the anchors before the
	synopsis. This isn't perfect, but the best we can achieve without
	stylesheet hackery.

2002-12-13  Matthias Clasen  <maclas@gmx.de>
	
	* gtkdoc-mkdb.in: Add an --ignore-files option which can be used
	to omit files or directories from scanning.
	(OutputSGMLFile): Emit anchors for all objects contained in the
	file to avoid dangling links.
	(OutputMissingDocumentation): Emit deprecated symbols after
	undeprecated ones.

2002-12-12  Matthias Clasen  <maclas@gmx.de>

	* gtkdoc-scan.in (ScanHeader): Also recognize "positive" guards
	like #ifdef GTK_ENABLE_BROKEN.

2002-12-11  Matthias Clasen  <maclas@gmx.de>

	* gtk-doc.xsl: Change XPath path to "//anchor|//refentry" for the 
	generation of index.sgml. The previous path "//anchor|refentry"
	was not matching any refentrys.

2002-12-09  Matthias Clasen  <maclas@gmx.de>

	* gtkdoc-mktmpl.in (UpdateTemplates): Emit unused class structs
	to $MODULE-unused.txt.

2002-12-08  Matthias Clasen  <maclas@gmx.de>

	* gtkdoc-mkdb.in (OutputStruct): Don't emit private parts
	of class structs to parameter lists in docs. Remove leftover
	debugging output.

	* gtkdoc-mktmpl.in (OutputDeclaration): Don't emit private parts
	of class structs to parameter lists in templates.

2002-12-06  Matthias Clasen  <maclas@gmx.de>

	Improved /*< private >*/ handling:  (#95398)
	
	* gtkdoc-mkdb.in (OutputStruct): Handle /*< public >*/ and 
	/*< private >*/ for all structs. Default to private for object and 
	class structs, to public for all other structs.

	* gtkdoc-scan.in (ScanHeader): Emit declarations for class structs
	to $MODULE-decl.txt.

2002-12-05  Matthias Clasen  <maclas@gmx.de>

	* gtkdoc-mktmpl.in (OutputDeclaration): 
	* gtkdoc-mkdb.in (ReadTemplateFile): Support @Since: and