@@ -25,6 +25,7 @@
 #############################################################################
 
 use strict;
+use bytes;
 use Getopt::Long;
 
 # Options
